# vpnet

./: Cargo.toml  README.md
src/: crypto.rs  lib.rs  network.rs  protocol.rs  virtual_device.rs
vpnet-client/: Cargo.toml
vpnet-client/src/: config.rs  main.rs
vpnet-server/: Cargo.toml
vpnet-server/src/: config.rs  main.rs
vpnet-web/: Cargo.toml
vpnet-web/src/: main.rs
vpnet-web/static/: index.html
vpnet-web/static/css/: style.css
vpnet-web/static/js/: app.js
