[package]
name = "vpnet"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "A cross-platform, high-performance, decentralized virtual LAN platform"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rustls = "0.21"
tokio-rustls = "0.24"
hyper = { version = "1.0", features = ["http2"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
iana-time-zone = "0.1"
mio = "0.8"
pnet = "0.33"
rand = "0.8"
base64 = "0.21"
ring = "0.17"

[workspace]
members = [
    ".",
    "vpnet-client",
    "vpnet-server",
    "vpnet-web"
]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link time optimization
codegen-units = 1 # Better optimization
panic = "abort"   # Smaller binary size

[profile.dev]
debug = true
opt-level = 0
