[package]
name = "vpnet-client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "VPNet Client - A lightweight, fast virtual LAN client"
license = "MIT"

[dependencies]
vpnet = { path = ".." }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1.0"
nix = { version = "0.27", optional = true }
winapi = { version = "0.3", optional = true, features = ["iphlpapi", "ws2def", "ws2ipdef", "winsock2"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "ws2def", "ws2ipdef", "winsock2"] }

[target.'cfg(unix)'.dependencies]
nix = "0.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
