[package]
name = "vpnet-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "VPNet Server - A high-performance, decentralized virtual LAN server"
license = "MIT"

[dependencies]
vpnet = { path = ".." }
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "compression", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde", "clock"] }
jsonwebtoken = "9.2"
sha2 = "0.10"
thiserror = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
